--- a/instat/instat.vbproj
+++ b/instat/instat.vbproj
@@ -142,6 +142,12 @@
   <ItemGroup>
     <Compile Include="clsBlockReader.vb" />
     <Compile Include="clsRCodeStructure.vb" />
+    <Compile Include="dlgAddKey.Designer.vb">
+      <DependentUpon>dlgAddKey.vb</DependentUpon>
+    </Compile>
+    <Compile Include="dlgAddKey.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="dlgCalculationsSummary.Designer.vb">
       <DependentUpon>dlgCalculationsSummary.vb</DependentUpon>
     </Compile>
@@ -1971,6 +1977,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="dlgAddKey.resx">
+      <DependentUpon>dlgAddKey.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="dlgCalculationsSummary.fr-FR.resx">
       <DependentUpon>dlgCalculationsSummary.vb</DependentUpon>
     </EmbeddedResource>
